--- a/Deckouverte/package.json
+++ b/Deckouverte/package.json
@@ -38,6 +38,7 @@
     "expo-system-ui": "~4.0.3",
     "expo-web-browser": "~14.0.1",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.473.0",
     "lucide-react-native": "^0.460.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
