--- a/Deckouverte/app.json
+++ b/Deckouverte/app.json
@@ -14,7 +14,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#f8f7ff"
       },
       "package": "com.deckouverte.Deckouverte"
     },
